--- a/packages/core/test/bundling/hello_world/BUILD.bazel
+++ b/packages/core/test/bundling/hello_world/BUILD.bazel
@@ -2,6 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("//tools:defaults.bzl", "jasmine_node_test", "ng_module", "ng_rollup_bundle", "ts_library")
 load("//tools/symbol-extractor:index.bzl", "js_expected_symbol_test")
+load("//tools/size-assertion:index.bzl", "js_size_assertion_test")
 load("@build_bazel_rules_nodejs//:defs.bzl", "http_server")
 
 ng_module(
@@ -71,6 +72,19 @@ js_expected_symbol_test(
         "ivy-aot",
         "ivy-only",
     ],
+)
+
+js_size_assertion_test(
+    name = "size_test",
+    src = ":bundle.min.js",
+    golden = ":bundle.size.json",
+    tags = [
+        "ivy-aot",
+        "ivy-only",
+    ],
+    data = [
+        ":bundle.min.js.map"
+    ]
 )
 
 http_server(
